@@ -2,6 +2,7 @@ Changes in 1.2:
 - Make it possible to check data on chunk ranges instead of the entire torrent
 - Move data file jobs are now done one after the other (212614)
 - Implement partial seeding extension (256263)
+- Add support for IPv6 traffic class field
 
 Changes in 1.1.1:
 - Fix deadlock in utp::OutputQueue when packet sending fails
